# 3d_renderer

./: .gitignore  CMakeLists.txt  algebra.c  algebra.h  line.c  line.h  main.c  obj_parser.c  obj_parser.h  triangle.c  triangle.h
src/: algebra.c  algebra.h  line.c  line.h  main.c  mesh.h  obj_parser.c  triangle.h
